basic layout and links completed

--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
 
 <head>
     <title>Rohit Bulusu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Montserrat&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 
 
 <body>
     <header>
-        <h1> Sorry! I'm renovating!</h1>
-        <h2> If you need to reach me please email <a>info@rohitbulusu.com!</a></h2>
-
+        <h1 class="animated fadeIn"> Sorry! I'm renovating!</h1>
+        <h2 class="animated fadeIn"> If you need to reach me, please email <a href="mailto:info@rohitbulusu.com">info@rohitbulusu.com</a> <br> or click one of the links below!</h2>
     </header>
+    <div>
+        <a href="https://www.linkedin.com/in/rohitbulusu/" target="_blank"><i class="fab fa-linkedin animated fadeIn delay-1s"></i></a>
+        <a href="https://www.github.com/rohitbulusu/" target="_blank"><i class=" fab fa-github-square animated fadeIn delay-2s "></i></a>
+        <a href="https://www.behance.net/rohitbulusu/ " target="_blank"><i class="fab fa-behance-square animated fadeIn delay-3s"></i></a>
+    </div>
+    <script src="https://kit.fontawesome.com/432ea303cb.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
