fixed mail link

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 <body>
     <header>
         <h1 class="animated fadeIn"> Sorry! I'm renovating!</h1>
-        <h2 class="animated fadeIn"> If you need to reach me, please email <a href="mailto:info@rohitbulusu.com">info@rohitbulusu.com</a> <br> or click one of the links below!</h2>
+        <h2 class="animated fadeIn"> If you need to reach me, please email
+            <a href="mailto:info@rohitbulusu.com target=" _blank ">info@rohitbulusu.com</a> <br> or click one of the links below!</h2>
     </header>
     <div>
-        <a href="https://www.linkedin.com/in/rohitbulusu/" target="_blank"><i class="fab fa-linkedin animated fadeIn delay-1s"></i></a>
-        <a href="https://www.github.com/rohitbulusu/" target="_blank"><i class=" fab fa-github-square animated fadeIn delay-2s "></i></a>
-        <a href="https://www.behance.net/rohitbulusu/ " target="_blank"><i class="fab fa-behance-square animated fadeIn delay-3s"></i></a>
+        <a href="https://www.linkedin.com/in/rohitbulusu/ " target="_blank "><i class="fab fa-linkedin animated fadeIn delay-1s "></i></a>
+        <a href="https://www.github.com/rohitbulusu/ " target="_blank "><i class=" fab fa-github-square animated fadeIn delay-2s "></i></a>
+        <a href="https://www.behance.net/rohitbulusu/ " target="_blank "><i class="fab fa-behance-square animated fadeIn delay-3s "></i></a>
     </div>
-    <script src="https://kit.fontawesome.com/432ea303cb.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/432ea303cb.js " crossorigin="anonymous "></script>
 </body>
 
 </html>
